console version updated